﻿Revision history for Search-GIN-Extract-AttributeIndexes

{{$NEXT}}

2.000000 2015-08-14T13:59:13Z 4c0d0ab
 [01 - Version Scheme Changed]
 - Packaging now standardised on x.yyyzzz
 - This is the primary reason for the 2.x on the box.
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129

 [02 - Installer Tooling Changed]
 - ExtUtils::MakeMaker is now the installer toolkit for this dist.
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [Dependencies::Stats]
 - Dependencies changed since 1.0.2, see misc/*.deps* for details
 - build: -1
 - configure: +2 -1 (recommends: +1)
 - develop: +54 -2 (recommends: +1 -1, suggests: +1 ↑1)
 - runtime: +1 ↓1 (recommends: +1)
 - test: +3 ↓1 -2 (recommends: +3)

1.0.2 2013-04-06T04:32:43Z
 - Maintenace Release for Module::Build 0.4004

 [Dependencies::Stats]
 - Dependencies changed since 1.0.1, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +5 (recommends: ↑1, suggests: ↑1)
 - test: ↑1

 [Documentation]
 - Update copyright year
 - Reindent address
 - update address
 - add README.mkdn

 [Meta]
 - Bugtracker to github issues

 [Packaging]
 - Utilises new test_requires of Module::Build

1.0.1 2011-10-30T04:46:17Z
 - Maintenance release

 [Dependencies::Stats]
 - Dependencies changed since 1.0.0, see misc/*.deps* for details
 - runtime: +3
 - test: -1

 [Internals]
 - VERSION no longer set in BUILD
 - now exports AUTHORITY variable

 [Packaging]
 - Update License ( Indentation/Address )
 - release/author tests moved to xt/
 - MetaData uri's now point to https://
 - Now uses x_authority

1.0.0 2011-04-03T19:19:59Z
 [Packaging]
 - Migrating to x.y.z spec only.

0.01059819 2011-04-03T17:39:44Z
 [Dependencies::Stats]
 - Dependencies changed since 0.01000011, see misc/*.deps* for details
 - build: +1
 - configure: +1
 - develop: +1 (recommends: +1, suggests: +1)
 - runtime: +3 ↓2 -5
 - test: +7

 [Packaging]
 - Update toolchain.
 - Use @Author::KENTNL