@@ -1,6 +1,21 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
 2.000001
+ [Added / develop requires]
+ - Data::Dump
+ - English
+ - MooseX::AttributeIndexes
+ - MooseX::Types::Moose
+ - Software::License::Perl_5
+ - Test::MinimumVersion
+
+ [Changed / develop requires]
+ - Dist::Zilla::Plugin::Test::Compile::PerFile 0 → 0.003902
+ - Test::More 0.88 → 0.96
+
+ [Changed / develop suggests]
+ - Dist::Zilla::App::Command::bakeini 0.002005 → 0.002006
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.025002 → 2.025021
 
 2.000000 2015-08-14T13:59:13Z
  [Added / develop recommends]
